Fixed missalignment on file info checkbox

--- a/src/app/common/n-components/templates/n-components.css
+++ b/src/app/common/n-components/templates/n-components.css
@@ -21,6 +21,8 @@
     position: relative;
     left: 3px;
     padding-left: 5px; }
+    .checkbox label.top {
+      top: -10px; }
     .checkbox label::before {
       content: "";
       display: inline-block;
